# a-first-look

./: .gitignore  README.md
ai/poetry/: __init__.py  pyproject.toml
amplify/: .gitignore  README.md  package.json
analog/: README.md
apollo-server/: .gitignore  netlify.toml  package.json
apollo-server-netlify/: package.json
architect/: .gitignore  README.md  app.arc
astro/: README.md
astro-ssr/: package-lock.json  package.json
avalanche/: .gitignore  README.md  hardhat.config.js  package.json
azure/: .gitignore  README.md
begin/: index.js  readme.md
bun/: README.md  bun.lockb  db.ts  graphql.ts  index.ts  package.json  tsconfig.json
bun-next/: bun.lockb
cdk/: README.md
cfpages/: README.md
cloudflare-pages/: README.md
cloudflare-r2/: README.md  package.json
cloudflare-workers/: wrangler.toml
deno/: index.jsx
docker/: Dockerfile  README.md  index.js
docker-lambda/: README.md
ethaddress/: package.json
ethers/: index.html  package.json  pnpm-lock.yaml
express-graphql/: index.js  package.json
express-graphql-docker/: README.md  package.json
flightcontrol/: .gitignore  README.md  flightcontrol.json
fly/: README.md  package-lock.json  package.json
grafbase/: .gitignore  README.md  pnpm-lock.yaml
graphql/: README.md
graphql-helix/: package-lock.json  package.json
graphql-yoga/: package.json
graphql-yoga-netlify/: package.json
hono/: bun.lockb
how-to-query-a-graphql-api/: README.md
js-runtime/: Cargo.toml  example.js
marko/: package.json  wrangler.toml
nuxt3/: README.md  package.json
openai/: api.js  (+1 more)
(+605 files in other folders)
